crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@parens__parens1.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/parens/parens1.panda
---
Ok(
    Int(
        Int {
            n: 0,
        },
    ),
)
