crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@parens__parens3.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/parens/parens3.panda
---
Ok(
    BinOp(
        BinOp {
            left: BinOp(
                BinOp {
                    left: Var(
                        Var {
                            name: "a",
                        },
                    ),
                    right: Var(
                        Var {
                            name: "b",
                        },
                    ),
                    kind: Add,
                },
            ),
            right: Var(
                Var {
                    name: "c",
                },
            ),
            kind: Add,
        },
    ),
)
